# Laboratorio

./: CMakeLists.txt  Data.cpp  Data.h  README.md  Tempo.cpp  day.cpp  day.h  lcdclock.cpp  lcdclock.h  mainwindow.cpp  mainwindow.h  observer.h  qroundprogressbar.cpp  qroundprogressbar.h  subject.h  ui_mainwindow.h
LaboratorioTests/: CMakeLists.txt  Data.cpp  Data.h  ReadMe.md  Tempo.h  cifraIndex.cpp  dayWeek.cpp  dayWeek.h  isLeapYear.h  main.cpp
LaboratorioTests/Test/: CMakeLists.txt  DataTest.cpp  TempoTest.cpp  runAllTests.cpp
